--- a/config.json
+++ b/config.json
@@ -1,49 +1,35 @@
 {
 	"network-config": {
 		"org1": {
-			"name": "peerOrg1",
-			"mspid": "Org1MSP",
+			"name": "Focal Labs",
+			"mspid": "focal-labs.com",
+			"peer0": {
+				"requests": "grpcs://peer0.focal-labs.com:7051",
+				"events": "grpcs://peer0.focal-labs.com:7053",
+				"server-hostname": "peer0.focal-labs.com",
+				"tls_cacerts": "/etc/veep/crypto/peerOrganizations/focal-labs.com/peers/peer0.focal-labs.com/tls/ca.crt"
+			},
 			"peer1": {
-				"requests": "grpcs://127.0.0.1:7051",
-				"events": "grpcs://127.0.0.1:7053",
-				"server-hostname": "peer0.org1.example.com",
-				"tls_cacerts": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt"
+				"requests": "grpcs://peer1.focal-labs.com:7051",
+				"events": "grpcs://peer1.focal-labs.com:7053",
+				"server-hostname": "peer1.focal-labs.com",
+				"tls_cacerts": "/etc/veep/crypto/peerOrganizations/focal-labs.com/peers/peer1.focal-labs.com/tls/ca.crt"
 			},
 			"peer2": {
-				"requests": "grpcs://127.0.0.1:8051",
-				"events": "grpcs://127.0.0.1:8053",
-				"server-hostname": "peer1.org1.example.com",
-				"tls_cacerts": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/tls/ca.crt"
+				"requests": "grpcs://peer2.focal-labs.com:7051",
+				"events": "grpcs://peer2.focal-labs.com:7053",
+				"server-hostname": "peer2.focal-labs.com",
+				"tls_cacerts": "/etc/veep/crypto/peerOrganizations/focal-labs.com/peers/peer2.focal-labs.com/tls/ca.crt"
 			},
 			"admin": {
-				"key": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp/keystore",
-				"cert": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp/signcerts"
-			}
-		},
-		"org2": {
-			"name": "peerOrg2",
-			"mspid": "Org2MSP",
-			"peer1": {
-				"requests": "grpcs://127.0.0.1:9051",
-				"events": "grpcs://127.0.0.1:9053",
-				"server-hostname": "peer0.org2.example.com",
-				"tls_cacerts": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls/ca.crt"
-			},
-			"peer2": {
-				"requests": "grpcs://127.0.0.1:10051",
-				"events": "grpcs://127.0.0.1:10053",
-				"server-hostname": "peer1.org2.example.com",
-				"tls_cacerts": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/tls/ca.crt"
-			},
-			"admin": {
-				"key": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp/keystore",
-				"cert": "fabric-path/fabric-samples/first-network/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp/signcerts"
+				"key": "/etc/veep/crypto/peerOrganizations/focal-labs.com/users/Admin@focal-labs.com/msp/keystore",
+				"cert": "/etc/veep/crypto/peerOrganizations/focal-labs.com/users/Admin@focal-labs.com/msp/signcerts"
 			}
 		}
 	},
 	"host": "localhost",
 	"port": "8080",
-	"channel": "mychannel",
+	"channel": "main",
 	"keyValueStore": "/tmp/fabric-client-kvs",
 	"eventWaitTime": "30000",
 	"users":[
@@ -53,7 +39,7 @@
 		}
 	 ],
 	"pg": {
-		"host": "127.0.0.1",
+		"host": "explorer.pg",
 		"port": "5432",
 		"database": "fabricexplorer",
 		"username": "hppoc",
